# maverick

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cleanup.yml  run_agent.yml
agents/: .env.example  cleanup.py  config.json  main.py  populate_profile.py  pyproject.toml
agents/app/: agent_nodes.py  database.py  graph.py  models.py
frontend/: .env.example  middleware.tsx  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(app)/: error.tsx  layout.tsx
frontend/app/(app)/analytics/: loading.tsx  page.tsx
frontend/app/(app)/dashboard/: loading.tsx  page.tsx
frontend/app/(app)/profile/: loading.tsx  page.tsx
frontend/app/(app)/tracker/: loading.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/analytics/: AnalyticsClient.tsx  AnalyticsHeader.tsx  MetricsCards.tsx  ScoreMetricsCards.tsx  constants.ts  types.ts
frontend/components/analytics/charts/: ApplicationPipelineChart.tsx  CompanyDonutChart.tsx  JobStatusChart.tsx  ScoreDistributionChart.tsx  ScoreQualityChart.tsx  TimelineChart.tsx  TrendsChart.tsx
frontend/components/analytics/shared/: CustomTooltip.tsx  MobileTabSelector.tsx  StatsCard.tsx
frontend/components/dashboard/: JobDetailView.tsx  JobList.tsx  ScoreLegend.tsx  StatusUpdator.tsx
frontend/components/layout/: Header.tsx
frontend/components/profile/: ProfileForm.tsx
frontend/components/tracker/: AddApplicationDialog.tsx  AddApplicationForm.tsx  ApplicationsTable.tsx  EditApplicationForm.tsx
frontend/lib/: actions.ts  schema.ts  session.ts
(+4 files in other folders)
